5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1670_1397.log
== TEST (2019-04-16 18:20:06) 
-- CODE:
area= float(input(("area a ser fetilizada"))
if	(area<=10000):
	custo=area*5
else:
	custo=50000+((area-10000))*4
print(round(custo, 2))
	
-- ERROR:
File "XXXX", line 2
    if	(area<=10000):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:20:24) 
-- CODE:
area= float(input(("area a ser fetilizada"))
if	(area <= 10000):
	custo=area*5
else:
	custo=50000+((area-10000))*4
print(round(custo, 2))
	
-- ERROR:
File "XXXX", line 2
    if	(area <= 10000):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:20:31) 
-- CODE:
area= float(input(("area a ser fetilizada"))
if	(area =< 10000):
	custo=area*5
else:
	custo=50000+((area-10000))*4
print(round(custo, 2))
	
-- ERROR:
File "XXXX", line 2
    if	(area =< 10000):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:20:53) 
-- CODE:
area= float(input(("area a ser fetilizada"))
if(area<=10000):
	custo=area*5
else:
	custo=50000+((area-10000))*4
print(round(custo, 2))
	
-- ERROR:
File "XXXX", line 2
    if(area<=10000):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:21:19) 
-- CODE:
area= float(input(("area a ser fetilizada"))
if	(area<="10000"):
	custo=area*5
else:
	custo=50000+((area-10000))*4
print(round(custo, 2))
	
-- ERROR:
File "XXXX", line 2
    if	(area<="10000"):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:21:27) 
-- CODE:
area= float(input(("area a ser fetilizada"))
if	(area <="10000"):
	custo=area*5
else:
	custo=50000+((area-10000))*4
print(round(custo, 2))
	
-- ERROR:
File "XXXX", line 2
    if	(area <="10000"):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:21:33) 
-- CODE:
area= float(input(("area a ser fetilizada"))
if	(area <= "10000"):
	custo=area*5
else:
	custo=50000+((area-10000))*4
print(round(custo, 2))
	
-- ERROR:
File "XXXX", line 2
    if	(area <= "10000"):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:22:37) 
-- CODE:
area= float(input(("area a ser fetilizada"))
if	(area <== 10000)
	custo=area*5
else:
	custo=50000+((area-10000))*4
print(round(custo, 2))
	
-- ERROR:
File "XXXX", line 2
    if	(area <== 10000)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:10) 
-- CODE:
area= float(input(("area a ser fetilizada"))

if	(area <= 10000):
	custo=area*5
else:
	custo=50000+((area-10000))*4
print(round(custo, 2))
	
-- ERROR:
File "XXXX", line 3
    if	(area <= 10000):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:23) 
-- CODE:
area= float(input(("area a ser fetilizada"))

if	(area <= "10000"):
	custo=area*5
else:
	custo=50000+((area-10000))*4
print(round(custo, 2))
	
-- ERROR:
File "XXXX", line 3
    if	(area <= "10000"):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:36) 
-- CODE:
area= float(input(("area a ser fetilizada"))

if	(area >= "10000"):
	custo=area*5
else:
	custo=50000+((area-10000))*4
print(round(custo, 2))
	
-- ERROR:
File "XXXX", line 3
    if	(area >= "10000"):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:56) 
-- CODE:
area= float(input(("area a ser fetilizada"))    from math import*

if	(area <= "10000"):
	custo=area*5
else:
	custo=50000+((area-10000))*4
print(round(custo, 2))
	
-- ERROR:
File "XXXX", line 1
    area= float(input(("area a ser fetilizada"))    from math import*
                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:25:03) 
-- CODE:
area= float(input(("area a ser fetilizada"))    

if	(area <= "10000"):
	custo=area*5
else:
	custo=50000+((area-10000))*4
print(round(custo, 2))
	
-- ERROR:
File "XXXX", line 3
    if	(area <= "10000"):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:25:04) 
-- CODE:
area= float(input(("area a ser fetilizada"))    

if	(area <= "10000"):
	custo=area*5
else:
	custo=50000+((area-10000))*4
print(round(custo, 2))
	
-- ERROR:
File "XXXX", line 3
    if	(area <= "10000"):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:25:06) 
-- CODE:
area= float(input(("area a ser fetilizada"))    

if	(area <= "10000"):
	custo=area*5
else:
	custo=50000+((area-10000))*4
print(round(custo, 2))
	
-- ERROR:
File "XXXX", line 3
    if	(area <= "10000"):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:25:07) 
-- CODE:
area= float(input(("area a ser fetilizada"))    

if	(area <= "10000"):
	custo=area*5
else:
	custo=50000+((area-10000))*4
print(round(custo, 2))
	
-- EXECUTION TIME:
0.142392
-- ERROR:
  File "/home/codebench/codes/1670/1397/main.py", line 3
    if	(area <= "10000"):
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:25:09) 
-- CODE:
area= float(input(("area a ser fetilizada"))    

if	(area <= "10000"):
	custo=area*5
else:
	custo=50000+((area-10000))*4
print(round(custo, 2))
	
-- ERROR:
File "XXXX", line 3
    if	(area <= "10000"):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:26:12) 
-- CODE:
area= float(input(("area a ser fetilizada"))    

if	(area <= 10000):
	custo=area*5
else:
	custo=50000+((area-10000))*4
print(round(custo, 2))
	
-- ERROR:
File "XXXX", line 3
    if	(area <= 10000):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:26:14) 
-- CODE:
area= float(input(("area a ser fetilizada"))    

if	(area <= 10000):
	custo=area*5
else:
	custo=50000+((area-10000))*4
print(round(custo, 2))
	
-- ERROR:
File "XXXX", line 3
    if	(area <= 10000):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:26:16) 
-- CODE:
area= float(input(("area a ser fetilizada"))    

if	(area <= 10000):
	custo=area*5
else:
	custo=50000+((area-10000))*4
print(round(custo, 2))
	
-- ERROR:
File "XXXX", line 3
    if	(area <= 10000):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:29:02) 
-- CODE:
area= float(input("area a ser fertilizada em hectares"))
if (area <= 10000):
	custo=area*5
else:
	custo=10000+((area-10000)*4)
print(round(custo, 2))
-- OUTPUT:
22770.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:29:14) 
-- CODE:
area= float(input("area a ser fertilizada em hectares"))
if (area <= 10000):
	custo=area*5
else:
	custo=40000+((area-10000)*4)
print(round(custo, 2))
-- OUTPUT:
22770.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:29:25) 
-- CODE:
area= float(input("area a ser fertilizada em hectares"))
if (area <= 10000):
	custo=area*5
else:
	custo=50000+((area-10000)*4)
print(round(custo, 2))
-- EXECUTION TIME:
0.12745
-- TEST CASE 1:
---- input:
4554
---- correct output:
22770.0
---- user output:
22770.0
-- TEST CASE 2:
---- input:
18215
---- correct output:
82860.0
---- user output:
82860.0
-- TEST CASE 3:
---- input:
9000
---- correct output:
45000.0
---- user output:
45000.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
